<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.case1squadapps.ui.home.HomeFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.example.case1squadapps.ui.dashboard.DashboardFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_alarm"

        android:label="@string/alarm"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_video"

        android:label="@string/video"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_fab"

        android:label="@string/FAB"
        tools:layout="@layout/fragment_dashboard" />
</navigation>